--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
           </li>
           <li>vídeos</li>
           <li>contratación</li>
-          <li>contacto</li>
+          <li><a href="/pages/formulario.html">contacto</a></li>
         </ul>
       </nav>
       <img
@@ -338,5 +338,6 @@
         autoplay
       ></video>
     </section>
+    <div class="contentSeparator"></div>
   </body>
 </html>
