--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
           </li>
           <li>vídeos</li>
           <li>contratación</li>
-          <li><a href="/pages/formulario.html">contacto</a></li>
+          <li><a href="/pages/formulario.html"><span id="contacto">contacto</span></a></li>
         </ul>
       </nav>
       <img
