--- a/pages/formulario.html
+++ b/pages/formulario.html
@@ -21,7 +21,7 @@
     <header></header>
     <nav>
       <ul id="menuItemSup">
-        <li><a href="/index.html">inicio</a></li>
+        <li><a href="/index.html"><span id="inicio">inicio</span></a></li>
         <li>noticias</li>
         <li>tour</li>
         <li>fotos</li>
@@ -115,7 +115,7 @@
           <label for="accept">Acepto la política de protección de datos</label
           ><br /> <br>
 
-          <input type="submit" value="Enviar" />
+          <input type="submit" value="Enviar" id="submit" />
         </form>
       </div>
     </section>
